[gd_scene load_steps=5 format=3 uid="uid://bkl2a6ey2cxpg"]

[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="1_w86mx"]
[ext_resource type="Script" path="res://Scenes/HappeningInstance.gd" id="2_nimax"]
[ext_resource type="FontFile" uid="uid://d3evvotf2wqa3" path="res://Fonts/Play-Bold.ttf" id="2_s42or"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="3_hs11o"]

[node name="HappeningInstance" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_w86mx")
script = ExtResource("2_nimax")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s42or")
theme_override_font_sizes/font_size = 80
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_s42or")
theme_override_font_sizes/font_size = 32
text = "Testfwafwafawf
+awfwafwafawfwa
fawfwa
fwafwa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_hs11o")
theme_override_font_sizes/font_size = 32
text = "Option 1"
expand_icon = true

[node name="Option2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_hs11o")
theme_override_font_sizes/font_size = 32
text = "Option 1"

[node name="Option3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_hs11o")
theme_override_font_sizes/font_size = 32
text = "Option 1"

[node name="Option4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_hs11o")
theme_override_font_sizes/font_size = 32
text = "Option 1"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option4" to="." method="_on_option_4_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
